--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             /* Login screen */
             #login{padding:10px;}
             h1{width:100%;text-align:center;font-size:24px;}
+            #warning{width:100%;color:#dd0000;font-weight:bold;font-size:14px;text-align:justify;}
             #intro{font-size:14px;text-align:justify;}
             h2{margin:10px 0px;font-size:16px;}
             #login p{margin:10px 0px;}
@@ -81,6 +82,10 @@
 
             <div id="login">
                 <h1>myLock Easy Encryption</h1>
+                <p id="warning">
+                    WARNING: THIS IS A PROOF OF CONCEPT AND SHOULD NOT BE USED FOR REAL SECRETS.
+                </p>
+                <br/>
                 <p id="intro">
                     Welcome to myLock, the easy way to securely encrypt data
                     for others! No one will be able to read anything you
