--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             body{width:100%;text-align:center;}
             #wrapper{width:90%;text-align:center;}
             #wrapper > div{max-width:620px;text-align:left;}
+            #footer{margin:50px 0px;}
             .error{color:#dd0000;}
 
             /* Login screen */
@@ -204,6 +205,12 @@
                     <a id="decryption_data" target="_blank">Download</a>
                     <div id="decryption_status"></div>
                 </div>
+            </div>
+            <div id="footer">
+                Code and documentation:
+                <a href="https://www.github.com/diafygi/myLock" target="_blank">
+                    https://www.github.com/diafygi/myLock
+                </a>
             </div>
         </div>
 
@@ -725,6 +732,7 @@
                 document.getElementById("main").style.display = "none";
                 document.getElementById("send").style.display = "none";
                 document.getElementById("receive").style.display = "none";
+                document.getElementById("footer").style.display = "none";
 
                 //reset and show login page
                 if(page === "login"){
@@ -736,6 +744,7 @@
                     document.getElementById("login_msg").innerHTML = "";
                     document.getElementById("login_msg").className = "";
                     document.getElementById("login").style.display = "inline-block";
+                    document.getElementById("footer").style.display = "inline-block";
                     window.onbeforeunload = null;
                 }
 
